# v

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  pyproject.toml  v  v.bat  v.py  v.sh
.claude/agents/: domain-system-designer.md
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/include/: client.h
client/include/contexts/: client.h  render.h  sdl.h  window.h
client/include/domains/: window.h
client/include/input/: names.h
client/include/render/: ctx.h  mandelbulb_renderer.h  triangle_domain.h
client/include/render/gizmos/: axis_render.h
client/resources/shaders/: blocks.frag  blocks.vert  blocks_optimized.frag  blocks_optimized.vert  grid.frag  grid.vert  mandelbulb.glsl  post_processing_base.frag  post_processing_base.vert  shared.inl  triangle.glsl  ui.frag
client/src/: client.cpp  main.cpp
client/src/contexts/: render.cpp  sdl.cpp  window.cpp
client/src/contexts/render/: init_vk.cpp  init_vk.h  per_window_init.cpp  render.cpp
client/src/domains/: window.cpp
client/src/render/: init_vk.cpp  mandelbulb_renderer.cpp  per_window_init.cpp  render.cpp  triangle_domain.cpp
client/src/render/gizmos/: axis_render.cpp
common/: CMakeLists.txt
common/include/: components.h  defs.h  math.h  prelude.h  profile.h  rand.h  signal.h  sync.h  test.h  testing.h  tracy_windows_compat.h
common/include/async/: async.h
common/include/containers/: 64tree.h  hashdag.h  ud_map.h  ud_set.h
common/include/domain/: context.h  domain.h  expansion.h  test.h
common/include/engine/: camera.h  components.h  context.h  domain.h  domain.inl  engine.h  sigh.h  sink.h  sync.h  test.h  traits.h
common/include/engine/contexts/: network.h
common/include/engine/contexts/async/: async.h  coro_interface.h  coroutine.h  coroutine_state.h  future.h  scheduler.h  task.h  task_state.h
common/include/engine/contexts/net/: channel.h  channel_fsm.h  chat_channel.h  connection.h  connection_fsm.h  ctx.h  listener.h  net.h  net_channel.h  net_connection.h
common/include/engine/contexts/render/: ctx.h  default_render_domain.h  init_vk.h  render_domain.h
common/include/engine/contexts/window/: sdl.h  window.h
common/include/engine/serial/: compress.h  serde.h
common/include/mem/: owned_ptr.h  ref_counted.h
common/include/net/: channels.h
common/include/time/: stopwatch.h  time.h
common/include/util/: devcam.h
common/include/vox/: aabb.h
common/include/vox/store/: 64tree.h  hashdag.h  svo.h
common/include/world/: world.h
common/src/: hi.cpp  init.cpp  rand.cpp
common/src/async/: async.cpp
common/src/domain/: domain.cpp  test.cpp  world.cpp
common/src/engine/: domain.cpp  engine.cpp  sink.cpp  test.cpp
common/src/engine/contexts/: network.cpp
common/src/engine/contexts/async/: async.cpp  coro_interface.cpp  coroutine.cpp  scheduler.cpp
common/src/engine/contexts/net/: channel.cpp  channel_fsm.cpp  connection.cpp  connection_fsm.cpp  ctx.cpp  listener.cpp  net.cpp
common/src/engine/contexts/render/: default_render_domain.cpp  init_vk.cpp  per_window_init.cpp  render.cpp  render_domain.cpp
common/src/engine/contexts/window/: sdl.cpp  window.cpp
common/src/time/: stopwatch.cpp  time.cpp
common/src/tracy/: TracyClientWrapper.cpp
common/src/vox/store/: 64tree.cpp
common/src/world/: world.cpp
docs/: README.md
docs/architecture/: overview.md  patterns.md
docs/contexts/: README.md
docs/guides/: creating-domains.md  getting-started.md  voxel-storage.md
docs/reference/: build-system.md
docs/rendering/: render-domains.md
experiments/: CMakeLists.txt  README.md
experiments/fluid/: main.cpp  particles.h  renderer.h  simulation.h
experiments/voxel-rendering/: main.cpp
server/: CMakeLists.txt
server/include/: server.h
server/src/: main.cpp
tests/: CMakeLists.txt
tests/64tree/: main.cpp
tests/async/: main.cpp
tests/containers/: main.cpp
tests/domain/: main.cpp  testdomain.cpp  testdomain.h
tests/engine/: main.cpp
tests/math/: main.cpp
tests/net/: main.cpp
tests/rand/: main.cpp
tests/serial/: main.cpp
tests/svo/: main.cpp
tests/time/: main.cpp
